--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -54,9 +54,9 @@
                     <td th:text="${product.expirationDayPeriod}">expirationDayPeriod</td>
                     <td th:text="${product.bigBox}">bigBox</td>
                     <td th:text="${product.smallBox}">smallBox</td>
-                    <td th:text="${product.productCompany}">productCompany</td>
-                    <td th:text="${product.transportCompany}">transportCompany</td>
-                    <td th:text="${product.category}">category</td>
+                    <td th:text="${product.productCompany.name}">productCompany</td>
+                    <td th:text="${product.transportCompany.name}">transportCompany</td>
+                    <td th:text="${product.category.name}">category</td>
                     <td th:text="${product.contractStatus}">contractStatus</td>
                     <td th:text="${product.demandStatus}">demandStatus</td>
                     <td th:text="${product.productLevel}">productLevel</td>
