--- a/src/main/resources/templates/admin/product.html
+++ b/src/main/resources/templates/admin/product.html
@@ -101,7 +101,7 @@
     <div class="row">
         <div class="col">
             <button class="btn btn-primary" onclick="location.href='productEditForm.html'"
-                    th:onclick="|location.href='@{/admin/product/edit/{productId}(productId=${product.id})}}'|"
+                    th:onclick="|location.href='@{/admin/product/edit/{productId}(productId=${product.id})}'|"
                     type="button">Edit</button>
         </div>
         <div class="col">
